fix button aligning

--- a/pages/components/Benefits.module.scss
+++ b/pages/components/Benefits.module.scss
@@ -27,6 +27,8 @@
   width: 100%;
   max-width: 255px;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
 }
 
 @media only screen and (max-width: 600px) {
